Implemented population via API

--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,3 @@
-use backend cache to generate lists of all products
-populate all grids using cache
-consider using prefetch on Link - currently, it breaks everything (probably because prefetch is on root layout)
 transaction list needs to be persistent
+change index to a login screen
+set consistent text sizes
