--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,3 @@
-print receipt (Modal) upon payment
-reprint receipt (Modal) from database
 maybe add support for returns (requires re-architecting database)
+unify types - pretty jarring that Transaction uses Purchase but takes in Item
+reprint name and timestamp for transactions
